--- a/Documentation/doc/biblio/cgal_manual.bib
+++ b/Documentation/doc/biblio/cgal_manual.bib
@@ -2053,6 +2053,7 @@ ABSTRACT = {We present the first complete, exact and efficient C++ implementatio
   ,author        = {Nicholas Sharp and Keenan Crane}
   ,title         = {{A Laplacian for Nonmanifold Triangle Meshes}}
   ,journal       = {Computer Graphics Forum (SGP)}
+  ,url           = "https://www.cs.cmu.edu/~kmcrane/Projects/NonmanifoldLaplace/NonmanifoldLaplace.pdf"
   ,volume        = {39}
   ,number        = {5}
   ,year          = {2020}
