Correcting permanent redirect
Correcting permanent redirect

--- a/Documentation/doc/biblio/cgal_manual.bib
+++ b/Documentation/doc/biblio/cgal_manual.bib
@@ -338,7 +338,7 @@ Boissonnat}
   ,title        = "{PLY} - Polygon File Format"
   ,howpublished = {Paul Bourke}
   ,year         = 2011
-  ,url          = "http://paulbourke.net/dataformats/ply/"
+  ,url          = "https://paulbourke.net/dataformats/ply/"
 }
 
 
